archive/claim-cards/v275/porphyry.md
# CLAIM CARD — porphyry  (v275, seed 42, 120 steps)

**Anchor:** Bingham Canyon Cu-Mo-Au, Oquirrh Mountains, UT (late-Eocene quartz-monzonite porphyry, ~38 Ma)
**Deposit:** Copper porphyry — high-T high-pressure brine with discrete Cu and Mo pulses. Quartz + chalcopyrite + bornite + molybdenite + pyrite + tetrahedrite/tennantite paragenesis.
**Initial:** 400 °C, 2 kbar, wall=tabular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v3|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v6|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v7
**Scenario spec hash:** 571dc09f3f1007a558af233de5629a4cca8e3a75048b3f3a8cbb3d7b723110a9
**Archived strip SHA-256:** bb23393e68a0cc05d0bf0f237298145dc2cc8ab744317f6f5e7e900630798c7b

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (3):** chalcopyrite, pyrite, molybdenite
**Deterministic accessories (17):** albite — Documented sodic plagioclase/alteration mineral at Bingham; a non-diagnostic wall-rock accessory in the stockwork.; argentite — High-temperature Ag2S precursor to documented Bingham acanthite; valid only in the buried hydrothermal stage.; bismuthinite — Documented Bingham accessory and independently supported by USGS critical-mineral assays; reproduced across the three-seed evidence panel but not a defining headline phase.; feldspar — The quartz-monzonite porphyry and its potassic alteration contain feldspar-group phases; this generic engine token is non-diagnostic.; arsenopyrite — Documented Bingham sulfide accessory in the district inventory; reproducibly retained as a hypogene accessory across the three-seed evidence panel.; stibnite — Documented rare Bingham antimony sulfide; classified as an accessory rather than a characteristic porphyry product.; galena — Documented outer polymetallic Bingham sulfide; reproducibly delivered because this modeled pocket telescopes the porphyry-to-distal system.; tennantite — Documented Bingham tennantite-group sulfosalt in the Cu-bearing hydrothermal assemblage.; tetrahedrite — Documented Bingham tetrahedrite-group sulfosalt in the Cu-bearing hydrothermal assemblage.; magnetite — Bingham's central potassic core includes magnetite; the current modeled path reproduces it across all three evidence seeds as a legitimate potassic-core accessory.; malachite — Documented minor copper carbonate in Bingham's oxidized cap; it must first appear only after the authored exhumation boundary.; acanthite — Documented at the Bingham Canyon Mine; the modeled occurrence is restricted to the cool supergene interval where high-temperature argentite has inverted.; anglesite — Documented Bingham Canyon Mine oxidation product of Pb sulfides; it belongs only to the post-exhumation cap.; brochantite — Documented Bingham secondary copper sulfate; reproducibly appears only after oxygenated meteoric fluid arrives.; goethite — Documented Bingham Fe-oxyhydroxide and a plausible supergene product of sulfide oxidation.; hematite — Documented Bingham iron oxide; the modeled low-temperature appearance is part of the oxidized cap rather than the buried ore pulse.; ferrimolybdite — Documented at Bingham and recognized by USGS porphyry models as an oxidized molybdenum product; it must follow exhumation.
**Statistical (0):** (none)
**Aspirational (7):** bornite — A defining documented member of Bingham's bornite-chalcopyrite-gold zone, but absent from the current canonical seed and therefore not yet a deterministic promise.; native_gold — Documented in Bingham's bornite-gold zone, but the current path does not execute a bornite-bearing substrate before gold allocation. The copper-pulse prerequisite prevents the former step-1 artifact; native gold remains aspirational until that causal sequence is delivered.; epidote — Documented propylitic/skarn alteration around Bingham, but absent from all three evidence seeds under the current hydrothermal path.; quartz — Quartz stockwork veining is fundamental at Bingham, but no discrete quartz crystal appears in the current three-seed evidence panel.; titanite — Documented calc-silicate accessory in the Bingham intrusive/skarn system, but absent from all three SIM 272 commissioned seeds.; chrysocolla — Documented Bingham secondary Cu-silica remains licensed after exhumation, but is absent from all three SIM 272 commissioned seeds.; opal — Documented hydrous silica at Bingham remains licensed after exhumation, but is absent from all three SIM 272 commissioned seeds.
**Locality exclusions (6):** conichalcite — Not documented in the audited Bingham district inventory; do not infer a locality occurrence solely from available Cu-As-Ca chemistry.; lepidocrocite — Not documented in the audited Bingham inventory; the locality-supported Fe-weathering products are goethite and hematite.; mimetite — Not documented in the audited Bingham inventory; Pb and As availability alone is insufficient locality evidence.; wulfenite — Not documented in the audited Bingham inventory; the generic oxidized Pb-Mo pathway must not substitute for a locality record.; powellite — Not documented in the audited Bingham inventory; generic porphyry-Mo plausibility is weaker than the locality-specific ferrimolybdite record.; atacamite — Not documented in the audited Bingham inventory; chloride-rich magmatic brine does not by itself establish a late arid atacamite occurrence.

**Cited sources:**
  - Redmond & Einaudi 2010, Economic Geology 105:43-68, doi:10.2113/gsecongeo.105.1.43 — Bingham intrusion, vein, and sulfide sequence
  - Landtwing et al. 2010 (Econ. Geol. 105) — Bingham fluid evolution + Au content
  - Seo et al. 2012 — Mo pulse timing in porphyry systems
  - Heinrich 2007 — porphyry fluid chemistry compendium
  - Kouzmanov & Pokrovski 2012 — As activity in epithermal Cu systems
  - USGS SIR 2023-5082 — Bingham critical-mineral occurrence and bismuthinite-associated Bi
  - Mindat Bingham Canyon locality 19358, live inventory audited 2026-08-09 — accessory occurrence cross-check

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (20 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | albite | 1 | 2 | 0 | nucleation |
| 2 | argentite | 1 | 4 | 0 | nucleation |
| 3 | bismuthinite | 1 | 4 | 0 | nucleation |
| 4 | feldspar | 1 | 2 | 0 | nucleation |
| 5 | arsenopyrite | 4 | 4 | 0 | nucleation |
| 6 | stibnite | 23 | 2 | 0 | nucleation |
| 7 | chalcopyrite | 25 | 1 | 0 | nucleation |
| 8 | galena | 25 | 4 | 0 | nucleation |
| 9 | pyrite | 25 | 1 | 0 | nucleation |
| 10 | tennantite | 25 | 1 | 0 | nucleation |
| 11 | tetrahedrite | 25 | 1 | 0 | nucleation |
| 12 | molybdenite | 45 | 3 | 0 | nucleation |
| 13 | magnetite | 60 | 1 | 0 | nucleation |
| 14 | acanthite | 85 | 0 | 4 | argentite -> acanthite |
| 15 | anglesite | 85 | 4 | 0 | nucleation |
| 16 | brochantite | 85 | 5 | 0 | nucleation |
| 17 | goethite | 85 | 2 | 0 | nucleation |
| 18 | hematite | 85 | 1 | 0 | nucleation |
| 19 | malachite | 85 | 1 | 0 | nucleation |
| 20 | ferrimolybdite | 88 | 3 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** bornite, native_gold, epidote, quartz, titanite, chrysocolla, opal
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 398.2608943547146 → 25 °C  [24.999999999999968, 398.2608943547146] (raw_simulation_state)
  - pH: 4.5 → 4.5   [4.5, 4.5] (raw_simulation_state)
  - Eh: 0.2574989159953134 → 322.1090020413224 mV  [0.2574989159953134, 322.1090020413224] (raw_simulation_state)
  - salinity: 10 → 10 psu  [10, 10] (raw_simulation_state)
  - O2: 0.2 → 1.8 ppm (mg/kg solvent)  [0.2, 1.8] (raw_simulation_state)
  - concentration: 1 → 1 ×  [1, 1] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -8 → -5.709  [-8, -5.48]
  - SI_aragonite: -8 → -5.837  [-8, -5.669]
  - SI_dolomite: -8 → -8  [-8, -8]
  - SI_HMC: -7.118 → -5.769  [-7.244, -5.543]
  - SI_siderite: -6.299 → -3.312  [-6.299, -3.026]
  - SI_selenite: -8 → -1.071  [-8, -1.071]
  - SI_anhydrite: -8 → -1.26  [-8, -1.197]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -8 → -8  [-8, -8]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 2 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 3.592 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 87.40 °C; initial a_w=0.994 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=1.57292838; Requested 400 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=1.49626881; Requested 400 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: temperature-clamped-to-envelope; active=true; ΔlogK=4.17636763; Requested 400 C is outside this reaction's 10-250 C fitted envelope; the nearest 250 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - siderite: temperature-clamped-to-envelope; active=true; ΔlogK=1.72144134; Requested 400 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - rhodochrosite: temperature-clamped-to-envelope; active=true; ΔlogK=1.64390137; Requested 400 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - anhydrite: temperature-clamped-to-envelope; active=true; ΔlogK=2.59163674; Requested 400 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - barite: temperature-clamped-to-envelope; active=true; ΔlogK=2.45039976; Requested 400 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - celestine: temperature-clamped-to-envelope; active=true; ΔlogK=1.36378163; Requested 400 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 2 → 0.001 kbar [0.001, 2], n=120
  - Rock/confining pressure: not recorded
  - Temperature: 398.2608943547146 → 25 °C [24.999999999999968, 398.2608943547146], n=120
  - Secure aragonite assessment: 0/120 executed steps; first={"boundary_kbar":3.5732160863220197,"secure_aragonite":false}, last={"boundary_kbar":2.9888905400000003,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":120}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Transformation step 85: argentite → acanthite (cooling-below-phase-boundary); dehydration=null; phase-replacement={"schema":"paramorph-transition-v1","step":85,"from":"argentite","to":"acanthite","driver":"cooling-below-phase-boundary","temperature_C":34.99999999999977,"phase_boundary_C":173,"external_form_preserved":true}
  - Transformation step 85: argentite → acanthite (cooling-below-phase-boundary); dehydration=null; phase-replacement={"schema":"paramorph-transition-v1","step":85,"from":"argentite","to":"acanthite","driver":"cooling-below-phase-boundary","temperature_C":34.99999999999977,"phase_boundary_C":173,"external_form_preserved":true}
  - Transformation step 85: argentite → acanthite (cooling-below-phase-boundary); dehydration=null; phase-replacement={"schema":"paramorph-transition-v1","step":85,"from":"argentite","to":"acanthite","driver":"cooling-below-phase-boundary","temperature_C":34.99999999999977,"phase_boundary_C":173,"external_form_preserved":true}
  - Transformation step 85: argentite → acanthite (cooling-below-phase-boundary); dehydration=null; phase-replacement={"schema":"paramorph-transition-v1","step":85,"from":"argentite","to":"acanthite","driver":"cooling-below-phase-boundary","temperature_C":34.99999999999977,"phase_boundary_C":173,"external_form_preserved":true}
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - No declared non-sulfur fluid-boundary transaction was executed.

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 83: chalcopyrite #16 enclosed stibnite #14; route=geometric-overlap; host net layer=260.9830272958641 µm; distance/reach=19.404518390601616/20.111817876972083 mm; size ratio=3456.840756870679; guest recent=2.9757766743121774 µm; guest core/loss/remaining=2.9757766743121774/0/2.9757766743121774 µm; partial loss=false.
  - Step 103: ferrimolybdite #38 enclosed acanthite #13; route=geometric-overlap; host net layer=299.3237120160675 µm; distance/reach=15.375555510458176/18.45809356088556 mm; size ratio=3.0992282952514087; guest recent=-45 µm; guest core/loss/remaining=3191.5989164954512/270/2921.5989164954512 µm; partial loss=true.
  - Step 108: brochantite #41 enclosed pyrite #15; route=geometric-overlap; host net layer=118.39529804931962 µm; distance/reach=5.845196834104975/5.88753526720978 mm; size ratio=3.604706121417717; guest recent=-45 µm; guest core/loss/remaining=1006.6256759128157/360/646.6256759128157 µm; partial loss=true.
  - Final inclusion status: 3 current; 3 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Sulfur ledger: explicit valence-resolved sulfur pools were not enabled for this scenario.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 2502; formula-bearing=0; solid-solution=0; binding competition=6; reactive transformation etches=0; masked horizons=0.
  - Competition crystal 38, step 116: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":38,"scaling":0.9742931064964033,"limiting_species":"Mo","requested_per_species":{"Fe":2.5705174777663324,"Mo":6.6242028287828},"allocated_per_species":{"Fe":2.5044374587162594,"Mo":6.453915152117057},"allocation_rounds":2}.
  - Competition crystal 46, step 116: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":46,"scaling":0.8640991045038097,"limiting_species":"Mo","requested_per_species":{"Fe":2.8983220161469543,"Mo":7.468952482971359},"allocated_per_species":{"Fe":2.5044374587162594,"Mo":6.453915152117057},"allocation_rounds":2}.
  - Competition crystal 44, step 117: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":44,"scaling":1,"limiting_species":null,"requested_per_species":{"Fe":1.9345798978318354,"Mo":4.9853968092291305},"allocated_per_species":{"Fe":1.9345798978318354,"Mo":4.9853968092291305},"allocation_rounds":2}.
  - Competition crystal 46, step 117: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":46,"scaling":0.9914148628991963,"limiting_species":"Mo","requested_per_species":{"Fe":2.056151866095608,"Mo":5.298686791903498},"allocated_per_species":{"Fe":2.0384995204251037,"Mo":5.253196839340789},"allocation_rounds":3}.
  - Competition crystal 38, step 119: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":38,"scaling":0.8713515619510781,"limiting_species":"Mo","requested_per_species":{"Fe":2.3089815221277297,"Mo":5.950226778374817},"allocated_per_species":{"Fe":2.011934655822175,"Mo":5.184739397300028},"allocation_rounds":2}.
  - Competition crystal 46, step 119: ferrimolybdite; {"schema":"graduated-competition-residual-v1","crystal_id":46,"scaling":0.9075741611994156,"limiting_species":"Mo","requested_per_species":{"Fe":2.2168267253920924,"Mo":5.7127446097055845},"allocated_per_species":{"Fe":2.0119346558221753,"Mo":5.184739397300029},"allocation_rounds":2}.
  - Habit crystal 1: feldspar; prismatic; extent=individual; forms=["{010} pinacoid","{001} pinacoid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":1400,"record_cm":700}; CDR=null.
  - Habit crystal 2: albite; prismatic; extent=individual; forms=["{001} cleavage","{010} face","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 3: bismuthinite; stout_prismatic; extent=individual; forms=["stout {110} prism","tin-white metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 4: acanthite; arborescent; extent=individual; forms=["dendritic Ag₂S branches","wire-like aggregates"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 5: feldspar; prismatic; extent=individual; forms=["{010} pinacoid","{001} pinacoid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":1400,"record_cm":700}; CDR=null.
  - Habit crystal 6: albite; prismatic; extent=individual; forms=["{001} cleavage","{010} face","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 7: acanthite; arborescent; extent=individual; forms=["dendritic Ag₂S branches","wire-like aggregates"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 8: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 9: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 10: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 11: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 12: acanthite; arborescent; extent=individual; forms=["dendritic Ag₂S branches","wire-like aggregates"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 13: acanthite; arborescent; extent=individual; forms=["dendritic Ag₂S branches","wire-like aggregates"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 14: stibnite; elongated_prism_blade; extent=individual; forms=["elongated {110} prism","sword-blade terminations","brilliant metallic luster"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 15: pyrite; striated_cubic; extent=individual; forms=["{100} cube, striated faces (oscillatory {100}/{210} combination growth)"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 16: chalcopyrite; disphenoidal; extent=individual; forms=["{112} disphenoid","{012}"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 17: tetrahedrite; massive; extent=individual; forms=["{111} tetrahedron","steel-gray metallic"]; size authority={"extent_kind":"individual","cap_cm":12,"record_cm":6}; CDR=null.
  - Habit crystal 18: tennantite; massive; extent=individual; forms=["{111} tetrahedron","gray-black metallic with cherry-red transmission"]; size authority={"extent_kind":"individual","cap_cm":12,"record_cm":6}; CDR=null.
  - Habit crystal 19: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 20: bismuthinite; stout_prismatic; extent=individual; forms=["stout {110} prism","tin-white metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 21: bismuthinite; stout_prismatic; extent=individual; forms=["stout {110} prism","tin-white metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 22: molybdenite; hexagonal platy; extent=individual; forms=["{0001} basal pinacoid","{10-10} prism"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 23: molybdenite; hexagonal platy; extent=individual; forms=["{0001} basal pinacoid","{10-10} prism"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 24: molybdenite; hexagonal platy; extent=individual; forms=["{0001} basal pinacoid","{10-10} prism"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 25: bismuthinite; stout_prismatic; extent=individual; forms=["stout {110} prism","tin-white metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 26: magnetite; octahedral; extent=individual; forms=["{111} octahedron","metallic black"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 27: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 28: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 29: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 30: stibnite; elongated_prism_blade; extent=individual; forms=["elongated {110} prism","sword-blade terminations","brilliant metallic luster"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 31: malachite; banded_massive; extent=aggregate; forms=["banded botryoidal","concentric layers"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":9,"status":"Handbook record includes crystals, sprays, and crude composite aggregates to 9 cm; larger botryoidal/stalactitic bodies are aggregate extents and are bounded by cavity capacity, not mislabeled as one crystal.","sources":["Handbook of Mineralogy, Malachite (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/malachite.pdf"]}; CDR=null.
  - Habit crystal 32: goethite; botryoidal/stalactitic; extent=individual; forms=["botryoidal masses","velvety surfaces"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 33: hematite; botryoidal; extent=individual; forms=["kidney-ore texture"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 34: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 35: anglesite; pseudomorph_after_galena; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 36: goethite; botryoidal/stalactitic; extent=individual; forms=["botryoidal masses","velvety surfaces"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR={"schema":"cdr-replacement-evidence-v1","parent_crystal_id":15,"parent_mineral":"pyrite","child_mineral":"goethite","route_trigger":"oxidative","parent_loss_um":15,"matching_zone_count":1,"matching_zone_steps":[85],"shape_preserved":true}.
  - Habit crystal 37: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 38: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 39: anglesite; pseudomorph_after_galena; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 40: anglesite; pseudomorph_after_galena; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 41: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 42: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 43: anglesite; pseudomorph_after_galena; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 44: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 45: brochantite; drusy_crust; extent=individual; forms=["microcrystalline druse","emerald-green coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 46: ferrimolybdite; powdery crust; extent=individual; forms=["earthy yellow powder","sulfur-yellow coating"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.

## Scenario notes (author's own rationale)
> Anchor: Bingham Canyon Cu-Mo-Au deposit, Oquirrh Mountains, UT. Late-Eocene (~38 Ma) quartz-monzonite-porphyry intrusion with classic potassic-core / phyllic-shell / propylitic-rim alteration zoning.

> Fluid evolution from Landtwing et al. 2010 (Econ. Geol. 105) LA-ICP-MS study: deep central brine ~7 wt% NaCl-eq with subequal Na/K/Fe/Cu, upper brine endmember ~45 wt% NaCl-eq coexisting with a low-density vapor (~0.2 g/cm³). Mo arrives in a distinct later pulse from Cu (Seo et al. 2012; encoded in event_molybdenum_pulse).

> Chemistry-audit gap-fill pass (Apr 2026): added Na, K, Cl, Mg, Ag, Te to populate the brine-element baseline that was missing. Initial Cu and Mo remain zero by design — delivered by event_copper_injection (steps 25, 60) and event_molybdenum_pulse (step 45) respectively, modeling the discrete pulse pattern documented at Bingham.

> Existing values (SiO2, Ca, CO3, Fe, Mn, Pb, Sb, As, Bi, S, F, pH, salinity, O2) were intentional and were not retuned. This is a gap-fill audit, not a rewrite.

> SIM 261 locality reconciliation: ambient thermal pulses remain native and active during the buried magmatic-hydrothermal stage, then the step-85 exhumation boundary permanently disables them, drops pressure toward atmospheric, and cools the oxidized cap to 35→25°C. This preserves episodic porphyry injections without allowing a dead magma source to reheat supergene malachite to ~244°C.
